--- a/weather app.html
+++ b/weather app.html
@@ -19,7 +19,7 @@
         <div class="box">
             <div class="info-weather">
                 <div class="weather">
-                <img src="images/cloud.png" >
+                <img src="cloud.png" >
                 <p class="temperature">0<span>°C</span></p>
                 <p class="description">Broken Clouds</p>
             </div>
@@ -50,7 +50,7 @@
        </div>
        <div class="not-found">
         <div class="box">
-            <img src="images/404.png" >
+            <img src="404.png" >
             <p>Oops! Location not found!</p>
         </div>
        </div>
