--- a/weather app.html
+++ b/weather app.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>weather application</title>
+    <title>Weather Application</title>
     <link rel="stylesheet" href="weather.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
@@ -11,50 +11,51 @@
     <div class="container">
         <div class="search-box">
             <i class='bx bxs-map'></i>
-            <input type="text"placeholder="Enter the location">
+            <input type="text" placeholder="Enter the location">
             <button class="bx bx-search"></button>
         </div>
-        <p class="city-hide">city hide</p>
-      <div class="weather-box">
-        <div class="box">
-            <div class="info-weather">
-                <div class="weather">
-                <img src="cloud.png" >
-                <p class="temperature">0<span>°C</span></p>
-                <p class="description">Broken Clouds</p>
-            </div>
-            </div>
-        </div>
-    </div>
-       <div class="weather-details">
-        <div class="humidity">
-            <i class='bx bx-water'></i>
-            <div class="text">
-                <div class="info-humidity">
-                    <span>0%</span>
+        <p class="city-hide">City Hide</p>
+        <div class="weather-box">
+            <div class="box">
+                <div class="info-weather">
+                    <div class="weather">
+                        <!-- Updated image path to direct reference -->
+                        <img src="cloud.png" alt="Weather Icon">
+                        <p class="temperature">0<span>°C</span></p>
+                        <p class="description">Broken Clouds</p>
+                    </div>
                 </div>
-                <p>Humidity</p>
             </div>
         </div>
-        
+        <div class="weather-details">
+            <div class="humidity">
+                <i class='bx bx-water'></i>
+                <div class="text">
+                    <div class="info-humidity">
+                        <span>0%</span>
+                    </div>
+                    <p>Humidity</p>
+                </div>
+            </div>
             <div class="wind">
                 <i class='bx bx-wind'></i>
                 <div class="text">
                     <div class="info-wind">
-                        <span>0Km/h</span>
+                        <span>0 Km/h</span>
                     </div>
                     <p>Wind Speed</p>
                 </div>
             </div>
-
-       </div>
-       <div class="not-found">
-        <div class="box">
-            <img src="404.png" >
-            <p>Oops! Location not found!</p>
         </div>
-       </div>
+        <div class="not-found">
+            <div class="box">
+                <!-- Updated image path to direct reference -->
+                <img src="404.png" alt="Not Found">
+                <p>Oops! Location not found!</p>
+            </div>
+        </div>
     </div>
-    <script src="weather.j.js"></script>
+    <!-- Corrected the script path -->
+    <script src="weathers.js"></script>
 </body>
 </html>
