--- a/weather app.html
+++ b/weather app.html
@@ -56,6 +56,6 @@
         </div>
     </div>
     <!-- Corrected the script path -->
-    <script src="weathers.js"></script>
+    <script src="weather.j.js"></script>
 </body>
 </html>
